@@ -15,6 +15,7 @@ Author: Daniel Kroening, kroening@kroening.com
 #include <util/find_symbols.h>
 #include <util/base_type.h>
 #include <util/cprover_prefix.h>
+#include <util/replace_symbol.h>
 
 #include <ansi-c/ansi_c_language.h>
 #include <cpp/cpp_language.h>
@@ -163,7 +164,9 @@ void dump_ct::operator()(std::ostream &os)
     }
 
     // we don't want to dump in full all definitions
-    if(!tag_added && ignore(symbol))
+    if(!tag_added &&
+       ignore(symbol) &&
+       symbol.name!=goto_functions.entry_point())
       continue;
 
     if(!symbols_sorted.insert(name_str).second)
@@ -206,7 +209,8 @@ void dump_ct::operator()(std::ostream &os)
       goto_functionst::function_mapt::const_iterator func_entry=
         goto_functions.function_map.find(symbol.name);
 
-      if(func_entry!=goto_functions.function_map.end() &&
+      if(!harness &&
+         func_entry!=goto_functions.function_map.end() &&
          func_entry->second.body_available() &&
          (symbol.name==ID_main ||
           (!config.main.empty() && symbol.name==config.main)))
@@ -990,6 +994,73 @@ void dump_ct::convert_global_variable(
 
 /*******************************************************************\
 
+Function: dump_ct::cleanup_harness
+
+Inputs: b  Code block to be cleaned
+
+Outputs:
+
+Purpose: Replace CPROVER internal symbols in b by printable values and
+         generate necessary declarations.
+
+\*******************************************************************/
+
+void dump_ct::cleanup_harness(code_blockt &b)
+{
+  replace_symbolt replace;
+  code_blockt decls;
+
+  const symbolt *argc_sym=nullptr;
+  if(!ns.lookup("argc'", argc_sym))
+  {
+    symbol_exprt argc("argc", argc_sym->type);
+    replace.insert(argc_sym->name, argc);
+    code_declt d(argc);
+    decls.add(d);
+  }
+  const symbolt *argv_sym=nullptr;
+  if(!ns.lookup("argv'", argv_sym))
+  {
+    symbol_exprt argv("argv", argv_sym->type);
+    replace.insert(argv_sym->name, argv);
+    code_declt d(argv);
+    decls.add(d);
+  }
+  const symbolt *return_sym=nullptr;
+  if(!ns.lookup("return'", return_sym))
+  {
+    symbol_exprt return_value("return_value", return_sym->type);
+    replace.insert(return_sym->name, return_value);
+    code_declt d(return_value);
+    decls.add(d);
+  }
+
+  Forall_operands(it, b)
+  {
+    codet &code=to_code(*it);
+
+    if(code.get_statement()==ID_function_call)
+    {
+      exprt &func=to_code_function_call(code).function();
+      if(func.id()==ID_symbol)
+      {
+        symbol_exprt &s=to_symbol_expr(func);
+        if(s.get_identifier()==ID_main)
+          s.set_identifier(CPROVER_PREFIX+id2string(ID_main));
+        else if(s.get_identifier()==CPROVER_PREFIX "initialize")
+          continue;
+      }
+    }
+
+    decls.add(code);
+  }
+
+  b.swap(decls);
+  replace(b);
+}
+
+/*******************************************************************\
+
 Function: dump_ct::convert_function_declarations
 
 Inputs:
@@ -1050,9 +1121,20 @@ void dump_ct::convert_function_declaration(
     converted_enum.swap(converted_e_bak);
     converted_compound.swap(converted_c_bak);
 
+    if(harness && symbol.name==goto_functions.entry_point())
+      cleanup_harness(b);
+
     os_body << "// " << symbol.name << std::endl;
     os_body << "// " << symbol.location << std::endl;
-    os_body << make_decl(symbol.name, symbol.type) << std::endl;
+    if(symbol.name==goto_functions.entry_point())
+      os_body << make_decl(ID_main, symbol.type) << std::endl;
+    else if(!harness || symbol.name!=ID_main)
+      os_body << make_decl(symbol.name, symbol.type) << std::endl;
+    else if(harness && symbol.name==ID_main)
+    {
+      os_body << make_decl(CPROVER_PREFIX+id2string(symbol.name), symbol.type)
+              << std::endl;
+    }
     os_body << expr_to_string(b);
     os_body << std::endl << std::endl;
 
@@ -1065,6 +1147,13 @@ void dump_ct::convert_function_declaration(
     os_decl << "// " << symbol.name << std::endl;
     os_decl << "// " << symbol.location << std::endl;
     os_decl << make_decl(symbol.name, symbol.type) << ";" << std::endl;
+  }
+  else if(harness && symbol.name==ID_main)
+  {
+    os_decl << "// " << symbol.name << std::endl;
+    os_decl << "// " << symbol.location << std::endl;
+    os_decl << make_decl(CPROVER_PREFIX+id2string(symbol.name), symbol.type)
+            << ";" << std::endl;
   }
 }
 
@@ -1507,10 +1596,12 @@ Function: dump_c
 void dump_c(
   const goto_functionst &src,
   const bool use_system_headers,
+  const bool include_harness,
   const namespacet &ns,
   std::ostream &out)
 {
-  dump_ct goto2c(src, use_system_headers, ns, new_ansi_c_language);
+  dump_ct goto2c(
+    src, use_system_headers, include_harness, ns, new_ansi_c_language);
   out << goto2c;
 }
 
@@ -1529,9 +1620,11 @@ Function: dump_cpp
 void dump_cpp(
   const goto_functionst &src,
   const bool use_system_headers,
+  const bool include_harness,
   const namespacet &ns,
   std::ostream &out)
 {
-  dump_ct goto2cpp(src, use_system_headers, ns, new_cpp_language);
+  dump_ct goto2cpp(
+    src, use_system_headers, include_harness, ns, new_cpp_language);
   out << goto2cpp;
 }
